--- a/BachBot/BachBot.vcxproj
+++ b/BachBot/BachBot.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="player_window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="common_defs.h" />
     <ClInclude Include="main_window.h" />
     <ClInclude Include="player_thread.h" />
     <ClInclude Include="player_window.h" />
