--- a/BachBot/BachBot.vcxproj.filters
+++ b/BachBot/BachBot.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="player_thread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="common_defs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
