Another day down.
Completely abstracted the event generation to a new class.  This gets it
off of the stack which Windows was complaining about, and also gives a
path forward for better event management.  It's painfully obvious that I
need a re-think on OrganMidiEvent at this point.

--- a/BachBot/BachBot.vcxproj.filters
+++ b/BachBot/BachBot.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="organ_midi_event.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="syndyne_importer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main_window.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="organ_midi_event.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="syndyne_importer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
