--- a/BachBot/BachBot.vcxproj
+++ b/BachBot/BachBot.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="organ_midi_event.cpp" />
     <ClCompile Include="player_thread.cpp" />
     <ClCompile Include="player_window.cpp" />
+    <ClCompile Include="syndyne_importer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common_defs.h" />
@@ -161,6 +162,7 @@
     <ClInclude Include="organ_midi_event.h" />
     <ClInclude Include="player_thread.h" />
     <ClInclude Include="player_window.h" />
+    <ClInclude Include="syndyne_importer.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\midifile\visual-studio\midifile.vcxproj">
