--- a/BachBot/BachBot.vcxproj
+++ b/BachBot/BachBot.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="organ_midi_event.cpp" />
     <ClCompile Include="player_thread.cpp" />
     <ClCompile Include="player_window.cpp" />
+    <ClCompile Include="playlist_loader.cpp" />
     <ClCompile Include="play_list.cpp" />
     <ClCompile Include="syndyne_importer.cpp" />
   </ItemGroup>
@@ -163,6 +164,7 @@
     <ClInclude Include="organ_midi_event.h" />
     <ClInclude Include="player_thread.h" />
     <ClInclude Include="player_window.h" />
+    <ClInclude Include="playlist_loader.h" />
     <ClInclude Include="play_list.h" />
     <ClInclude Include="syndyne_importer.h" />
   </ItemGroup>
@@ -170,6 +172,9 @@
     <ProjectReference Include="..\midifile\visual-studio\midifile.vcxproj">
       <Project>{70028d4b-8e0d-4ff2-bd05-d7ab19b66f30}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
