--- a/BachBot/BachBot.vcxproj.filters
+++ b/BachBot/BachBot.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="play_list.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="playlist_loader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main_window.h">
@@ -65,5 +68,11 @@
     <ClInclude Include="play_list.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="playlist_loader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
