--- a/BachBot/BachBot.vcxproj.filters
+++ b/BachBot/BachBot.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="playlist_loader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="playlist_entry_control.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main_window.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="playlist_loader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="playlist_entry_control.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
