--- a/BachBot/BachBot.vcxproj
+++ b/BachBot/BachBot.vcxproj
@@ -147,7 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="key_combo_catcher.cpp" />
+    <ClCompile Include="label_animator.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="main_window.cpp" />
     <ClCompile Include="midi_note_tracker.cpp" />
@@ -158,10 +158,11 @@
     <ClCompile Include="playlist_loader.cpp" />
     <ClCompile Include="play_list.cpp" />
     <ClCompile Include="syndyne_importer.cpp" />
+    <ClCompile Include="thread_loader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common_defs.h" />
-    <ClInclude Include="key_combo_catcher.h" />
+    <ClInclude Include="label_animator.h" />
     <ClInclude Include="main_window.h" />
     <ClInclude Include="midi_note_tracker.h" />
     <ClInclude Include="organ_midi_event.h" />
@@ -171,6 +172,7 @@
     <ClInclude Include="playlist_loader.h" />
     <ClInclude Include="play_list.h" />
     <ClInclude Include="syndyne_importer.h" />
+    <ClInclude Include="thread_loader.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\midifile\visual-studio\midifile.vcxproj">
