Several more feature enhancements:
* Wood grain!
* Song will not start to play unless either a force-advance event occurs
  or the desired config matches the current config.
* Added Next/Prev/Gen. Cancel buttons (not tested).
_Note:_ I am not adding the image I'm currently using for the wood grain
effect because I'm not sure the copyright status of it.  I will see if
there's a good free getty image or something that I can distribute.  If
not, I may just try to make my own with my iPhone.

--- a/BachBot/BachBot.vcxproj
+++ b/BachBot/BachBot.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bitmap_painter.cpp" />
     <ClCompile Include="label_animator.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="main_window.cpp" />
@@ -161,6 +162,7 @@
     <ClCompile Include="thread_loader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bitmap_painter.h" />
     <ClInclude Include="common_defs.h" />
     <ClInclude Include="label_animator.h" />
     <ClInclude Include="main_window.h" />
