Runway to porting:
Began the process of being able to port this to other platforms.
- Timer and Power saving abstracted to their own platform specific
  implementations.

--- a/BachBot/BachBot.vcxproj
+++ b/BachBot/BachBot.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="playlist_entry_control.cpp" />
     <ClCompile Include="playlist_loader.cpp" />
     <ClCompile Include="play_list.cpp" />
+    <ClCompile Include="rt_timer_win.cpp" />
     <ClCompile Include="syndyne_importer.cpp" />
     <ClCompile Include="thread_loader.cpp" />
   </ItemGroup>
@@ -173,6 +174,7 @@
     <ClInclude Include="playlist_entry_control.h" />
     <ClInclude Include="playlist_loader.h" />
     <ClInclude Include="play_list.h" />
+    <ClInclude Include="rt_timer.h" />
     <ClInclude Include="syndyne_importer.h" />
     <ClInclude Include="thread_loader.h" />
   </ItemGroup>
