--- a/BachBot/BachBot.vcxproj.filters
+++ b/BachBot/BachBot.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="bitmap_painter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rt_timer_win.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main_window.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="bitmap_painter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rt_timer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
