--- a/midifile.vcxproj
+++ b/midifile.vcxproj
@@ -94,6 +94,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ProgramDataBaseFileName>$(IntDir)$(TargetName).pdb</ProgramDataBaseFileName>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <AdditionalIncludeDirectories>D:\devel\BachBot\midifile\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -128,6 +129,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ProgramDataBaseFileName>$(IntDir)$(TargetName).pdb</ProgramDataBaseFileName>
+      <AdditionalIncludeDirectories>D:\devel\BachBot\midifile\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -137,23 +139,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\include\Binasc.h" />
-    <ClInclude Include="..\include\MidiEvent.h" />
-    <ClInclude Include="..\include\MidiEventList.h" />
-    <ClInclude Include="..\include\MidiFile.h" />
-    <ClInclude Include="..\include\MidiMessage.h" />
-    <ClInclude Include="..\include\Options.h" />
+    <ClCompile Include="midifile\src\Binasc.cpp" />
+    <ClCompile Include="midifile\src\MidiEvent.cpp" />
+    <ClCompile Include="midifile\src\MidiEventList.cpp" />
+    <ClCompile Include="midifile\src\MidiFile.cpp" />
+    <ClCompile Include="midifile\src\MidiMessage.cpp" />
+    <ClCompile Include="midifile\src\Options.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\Binasc.cpp" />
-    <ClCompile Include="..\src\MidiEvent.cpp" />
-    <ClCompile Include="..\src\MidiEventList.cpp" />
-    <ClCompile Include="..\src\MidiFile.cpp" />
-    <ClCompile Include="..\src\MidiMessage.cpp" />
-    <ClCompile Include="..\src\Options.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="README.md" />
+    <ClInclude Include="midifile\include\Binasc.h" />
+    <ClInclude Include="midifile\include\MidiEvent.h" />
+    <ClInclude Include="midifile\include\MidiEventList.h" />
+    <ClInclude Include="midifile\include\MidiFile.h" />
+    <ClInclude Include="midifile\include\MidiMessage.h" />
+    <ClInclude Include="midifile\include\Options.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
