Getting closer to release:
* Added a _somewhat_ hand-drawn icon (64x64x8bpp).
* More documentation improvements.
* CMake _builds_ in windows (resulting exe is broken though)
* Cleaned up many warnings.

--- a/BachBot/BachBot.vcxproj
+++ b/BachBot/BachBot.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="playlist_entry_control.h" />
     <ClInclude Include="playlist_loader.h" />
     <ClInclude Include="play_list.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="rt_timer.h" />
     <ClInclude Include="syndyne_importer.h" />
     <ClInclude Include="thread_loader.h" />
@@ -189,6 +190,12 @@
     <ProjectReference Include="..\midifile.vcxproj">
       <Project>{70028d4b-8e0d-4ff2-bd05-d7ab19b66f30}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="BachBot.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\BachBot.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
