--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,23 +6,24 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # set(CMAKE_TOOLCHAIN_FILE "D:/devel/vcpkg/scripts/buildsystems/vcpkg.cmake")
-set(VCPKG_TARGET_TRIPLET "x64-windows")
+# set(VCPKG_TARGET_TRIPLET "x64-windows")
 set(CMAKE_CL_64 True)
 
 find_package(fmt REQUIRED)
 find_package(wxWidgets COMPONENTS core base xml REQUIRED)
-# find_package(RtMidi CONFIG REQUIRED)
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+    find_package(RtMidi REQUIRED)
+endif()
 
 add_compile_definitions(
     _CRT_SECURE_NO_WARNINGS
     FMT_DEPRECATED_INCLUDE_XCHAR
 )
 
-# add_subdirectory(midifile)
-
 include(${wxWidgets_USE_FILE})
+include(CompilerWarnings.cmake)
 
-add_executable(${PROJECT_NAME} WIN32
+set(SRCS
     BachBot/bitmap_painter.cpp
     BachBot/label_animator.cpp
     BachBot/main.cpp
@@ -34,27 +35,53 @@ add_executable(${PROJECT_NAME} WIN32
     BachBot/playlist_entry_control.cpp
     BachBot/playlist_loader.cpp
     BachBot/play_list.cpp
-    BachBot/rt_timer_posix.cpp
     BachBot/syndyne_importer.cpp
     BachBot/thread_loader.cpp
 )
 
-target_include_directories(${PROJECT_NAME} PRIVATE
+set(INCLUDE_DIRS
     ${wxWidgets_INCLUDE_DIRS}
-    ${RtMidi_INCLUDE_DIRS}
-    # midifile/include
 )
 
-# message(${RtMidi_LIBRARIES})
-target_link_libraries(${PROJECT_NAME} PRIVATE
-    fmt::fmt
-    ${wxWidgets_LIBRARIES}
-    # ${RtMidi_LIBRARIES}
-    # RtMidi::rtmidi
-    rtmidi
-    midifile
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+    add_subdirectory(midifile)
+    set(SRCS
+        ${SRCS}
+        BachBot/rt_timer_win.cpp
+    )
+    set(INCLUDE_DIRS
+        ${INCLUDE_DIRS}
+        midifile/include
+    )
+else()
+    set(SRCS
+        ${SRCS}
+        BachBot/rt_timer_posix.cpp
+    )
+endif()
+
+add_executable(${PROJECT_NAME} WIN32
+    ${SRCS}
 )
 
-# target_link_options(${PROJECT_NAME} PRIVATE
-#     /SUBSYSTEM:WINDOWS
-# )
+set_project_warnings(${PROJECT_NAME} False)
+
+target_include_directories(${PROJECT_NAME} PRIVATE
+    ${INCLUDE_DIRS}
+)
+
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+    target_link_libraries(${PROJECT_NAME} PRIVATE
+        fmt::fmt
+        ${wxWidgets_LIBRARIES}
+        RtMidi::rtmidi
+        midifile
+    )
+else()
+    target_link_libraries(${PROJECT_NAME} PRIVATE
+        fmt::fmt
+        ${wxWidgets_LIBRARIES}
+        rtmidi
+        midifile
+    )
+endif()
